--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ocmock"]
 	path = ocmock
 	url = git@github.com:erikdoe/ocmock.git
+[submodule "cedar"]
+	path = cedar
+	url = git@github.com:pivotal/cedar.git
